WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167761
WK2: cannot tap on candidate view with hardware keyboard
https://bugs.webkit.org/show_bug.cgi?id=167761
Summary
WK2: cannot tap on candidate view with hardware keyboard
Enrica Casucci
Reported
2017-02-02 14:57:29 PST
1. Launch Safari 2. choose a Chinese keyboard 3. Go to Google.com 4. Using hardware keyboard type “ren” 5. Tap 任 in the bar The candidate is not selected and added to the search field. Instead, the tap triggers the Google suggestions underneath.
rdar://problem/28775395
Attachments
Patch
(1.32 KB, patch)
2017-02-02 15:02 PST
,
Enrica Casucci
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2017-02-02 15:02:14 PST
Created
attachment 300457
[details]
Patch
Tim Horton
Comment 2
2017-02-02 15:02:52 PST
Comment on
attachment 300457
[details]
Patch DOTS!
Enrica Casucci
Comment 3
2017-02-02 15:14:30 PST
Committed revision 211598.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug