WK2: cannot tap on candidate view with hardware keyboard. https://bugs.webkit.org/show_bug.cgi?id=167761 rdar://problem/28775395

Reviewed by Tim Horton.

The candidate view is a subview of the view returned by
automaticallySelectedOverlay and it should be the unscaled view
instead of the WKContentView.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView automaticallySelectedOverlay]):



Canonical link: https://commits.webkit.org/184807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211598 268f45cc-cd09-0410-ab3c-d52691b4dbfc